--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>guava</artifactId>
             <version>23.0</version>
         </dependency>
+        <!--okHttp-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
