--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -11,6 +11,12 @@
       "type": "java.lang.Boolean",
       "description": "是否配置七牛云.",
       "default": false
+    },
+    {
+      "name": "guanweiming.aliyun.sms.enabled",
+      "type": "java.lang.Boolean",
+      "description": "是否配置阿里云短信接口.",
+      "default": false
     }
   ]
 }
