--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,51 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>1.0.9</version>
+    <version>1.1.0</version>
 
     <repositories>
         <repository>
-            <id>maven-repo</id>
-            <url>https://raw.githubusercontent.com/zziaguan/maven/master</url>
+            <id>qiniu</id>
+            <url>http://p9w3qyosn.bkt.clouddn.com/</url>
         </repository>
         <repository>
             <id>ali</id>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
         <repository>
+            <id>maven-repo</id>
+            <url>https://raw.githubusercontent.com/zziaguan/maven/master</url>
+        </repository>
+        <repository>
             <id>repo1</id>
             <url>https://repo1.maven.org/maven2/</url>
         </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
     
     <dependencies>
         <dependency>
@@ -120,7 +149,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.0.RELEASE</version>
+                <version>2.0.3.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
