--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,20 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
 
     <repositories>
-        <repository>
-            <id>qiniu</id>
-            <url>http://p9w3qyosn.bkt.clouddn.com/</url>
-        </repository>
         <repository>
             <id>ali</id>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
         <repository>
-            <id>maven-repo</id>
-            <url>https://raw.githubusercontent.com/zziaguan/maven/master</url>
-        </repository>
-        <repository>
             <id>repo1</id>
             <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
         <repository>
             <id>spring-snapshots</id>
@@ -38,10 +34,7 @@
             <id>spring-milestones</id>
             <url>http://repo.spring.io/milestone</url>
         </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
+
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -89,9 +82,9 @@
         </dependency>
         <!--私人小工具-->
         <dependency>
-            <groupId>com.guanweiming.common</groupId>
+            <groupId>com.github.zziaguan</groupId>
             <artifactId>tools</artifactId>
-            <version>0.0.5</version>
+            <version>0.0.6</version>
         </dependency>
         <!--阿里云短信-->
         <dependency>
@@ -149,7 +142,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.3.RELEASE</version>
+                <version>2.0.4.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
