--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
 
     <repositories>
         <repository>
@@ -22,6 +22,10 @@
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>mirror.jitpack.io</id>
+            <url>http://jitpack.cdn.coding-space.cn</url>
         </repository>
         <repository>
             <id>spring-snapshots</id>
@@ -197,13 +201,6 @@
             </plugin>
         </plugins>
     </build>
-    <!--发布到本地-->
-    <distributionManagement>
-        <repository>
-            <id>maven-repo</id>
-            <url>file:///Users/guanweiming/maven-repo</url>
-        </repository>
-    </distributionManagement>
 
 
 </project>
