--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>1.1.4</version>
+    <version>1.1.5-beta</version>
 
     <repositories>
         <repository>
@@ -53,12 +53,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
-        <!--私人小工具-->
-        <dependency>
-            <groupId>com.github.zziaguan</groupId>
-            <artifactId>tools</artifactId>
-            <version>0.0.6</version>
         </dependency>
         <!--阿里云短信-->
         <dependency>
@@ -116,7 +110,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.6.RELEASE</version>
+                <version>2.1.0.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
