--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>2.1.0.RELEASE</version>
+    <version>2.2.2-dev-1</version>
 
 
 
@@ -16,7 +16,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.java>1.8</version.java>
         <version.swagger>2.9.2</version.swagger>
-        <version.spring-boot>2.1.0.RELEASE</version.spring-boot>
+        <version.spring-boot>2.2.2.RELEASE</version.spring-boot>
         <version.lombok>1.16.18</version.lombok>
     </properties>
 
