--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.guanweiming.common</groupId>
+    <groupId>com.github.guangee</groupId>
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>2.2.2-dev-1</version>
+    <version>2.2.2.RELEASE</version>
 
 
 
@@ -156,7 +156,7 @@
 
     <!--为了打包源码文件-->
     <build>
-        <finalName>${project.name}-${project.version}</finalName>
+        <finalName>${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
