--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>guanweiming-spring-boot-starter</artifactId>
 
     <description>对常见第三方组件的封装</description>
-    <version>2.2.2.RELEASE</version>
+    <version>1.0</version>
 
 
     <properties>
