--- a/pom.xml
+++ b/pom.xml
@@ -15,20 +15,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.java>1.8</version.java>
         <version.swagger>2.9.2</version.swagger>
-        <version.spring-boot>2.3.1.RELEASE</version.spring-boot>
+        <version.spring-boot>2.4.2</version.spring-boot>
         <version.lombok>1.16.18</version.lombok>
     </properties>
 
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <url>http://spring4all.com</url>
+        <url>https://www.coding-space.cn</url>
         <connection>git@github.com:SpringForAll/spring-boot-starter-swagger.git</connection>
         <developerConnection>https://github.com/SpringForAll/spring-boot-starter-swagger</developerConnection>
     </scm>
